src/tui/snapshots/veol__tui__toc__tests__widget_renders_empty_state.snap
---
source: src/tui/toc.rs
expression: render_buffer_text(&buf)
---
╭─  Table of Contents ────────────────╮
│                                      │
│                                      │
│                                      │
│            (no headings)             │
│                                      │
│                                      │
│                                      │
│    ↑↓ navigate  ⏎ jump  esc close    │
╰──────────────────────────────────────╯
