src/tui/snapshots/veol__tui__toc__tests__widget_renders_multilevel_toc.snap
---
source: src/tui/toc.rs
expression: render_buffer_text(&buf)
---
╭─  Table of Contents ────────────────╮
│ # Alpha                              │
│   ## Beta                            │
│     ### Gamma                        │
│   ## Delta                           │
│                                      │
│                                      │
│                                      │
│    ↑↓ navigate  ⏎ jump  esc close    │
╰──────────────────────────────────────╯
